--- a/views/nest/index.html
+++ b/views/nest/index.html
@@ -48,28 +48,29 @@
 </div>
 <script type="text/javascript">
     var w, h;
-    var bodyCan, can, bodyCxt, cxt;
-    var time = 1, t = 5, breakWidth = 0, breakHeight = 0, breakTime = 1;
+    var bodyCan, can, bodyCxt, cxt, txtHeight;
+    var time = 1, t = 10, breakWidth = 0, breakHeight = 0, breakTime = 1;
     var myWords = [
         {"content": "1、因你朴实的外表，善良的心，我选择跟你在一起"},
         {"content": "2、为了能让你坚强些，我做了一些你抵触的事"},
         {"content": "3、我后悔，因工作忙而忽略你"},
         {"content": "4、爱，这个字，我只说了一次，从我回来时，那次电话里"},
         {"content": "5、你没有做错什么，因为你是女孩子，需要被呵护，被爱"},
-        {"content": "."},
-        {"content": ".."},
-        {"content": "..."},
-        {"content": "..."},
-        {"content": ".."},
-        {"content": "."},
         {"content": "6、所有的一切或许这就是命运的安排..."},
         {"content": "7、以后，你自由了"},
-        {"content": "8、我不是男人的原因是我放下了尊严，对于我这值得"},
+        {"content": "8、我不是男人是我放下了尊严,这值得"},
         {"content": "9、选对一个人简单，厮守终生确很难"},
         {"content": "10、择一人，终一生，对你的承诺，不变"},
         {"content": "11、放开一切，只因你过的太苦"},
         {"content": "12、弃旧迎新吧"},
-        {"content": "13、（1-13-1）"}
+        {"content": "13、（1-13-1）"},
+        {"content": "14、愿你能读懂上面的话语，你有5秒的时间记忆!"},
+        {"content": "15、5"},
+        {"content": "16、4"},
+        {"content": "17、3"},
+        {"content": "18、2"},
+        {"content": "19、1"},
+        {"content": "20、再见"}
     ];
     $(function () {
         bodyCan = document.getElementById("bodyCanvas");
@@ -80,7 +81,7 @@
         //获得屏幕宽度和高度
         w = window.document.body.offsetWidth;
         h = window.document.body.offsetHeight;
-
+        txtHeight = (h - w / 2) / 21;
         countTime();
     });
 
@@ -117,22 +118,19 @@
         }
     }
     function initWords() {
-        if (time * 20 > h) {
-            bodyCxt.clearRect(0, 0, w, time * 40);
+        if (time > 20) {
+            bodyCxt.clearRect(0, 0, w, time * (txtHeight + 10));
             bodyCxt.fillStyle = "#000";
-            bodyCxt.fillRect(0, 0, w, time * 40);
+            bodyCxt.fillRect(0, 0, w, time * (txtHeight + 10));
         } else {
-            bodyCxt.clearRect(0, 0, w, time * 40);
-            bodyCxt.fillStyle = "#000";
-            bodyCxt.fillRect(0, 0, w, time * 40);
-            if (time * 20 <= ( h / 2 - w / 4)) {
+            if (time * txtHeight <= ( h / 2 - w / 4)) {
                 breakWidth = time * 10;
-                breakHeight = time * 20;
+                breakHeight = time * txtHeight;
                 bodyCxt.fillStyle = "#FFF";
-                bodyCxt.fillText(myWords[time - 1].content, time * 10, time * 20);
+                bodyCxt.fillText(myWords[time - 1].content, time * 10, time * txtHeight);
             } else {
                 bodyCxt.fillStyle = "#D7B3D7";
-                bodyCxt.fillText(myWords[time - 1].content, breakWidth - 10 * (breakTime - 1), time * 20 + h / 2 + w / 4 - breakHeight);
+                bodyCxt.fillText(myWords[time - 1].content, breakWidth - 10 * (breakTime - 1), time * txtHeight + h / 2 + w / 4 - breakHeight);
                 breakTime = breakTime + 1;
             }
             time = time + 1;
