--- a/views/nest/index.html
+++ b/views/nest/index.html
@@ -71,7 +71,7 @@
         {"content": "11、放开一切，只因你过的太苦."},
         {"content": "12、弃旧迎新吧!"},
         {"content": "13、（1-13-1）"},
-        {"content": "14、愿你能读懂上面的话语，你有5秒的时间记忆!"},
+        {"content": "14、愿你能读懂上面的话语，给你点时间去记忆!"},
         {"content": "5s"},
         {"content": "4s"},
         {"content": "3s"},
@@ -142,7 +142,7 @@
                 breakTime = breakTime + 1;
             }
             time = time + 1;
-            setTimeout(initWords, 3000);
+            setTimeout(initWords, 2000);
         }
     }
 </script>
