--- a/views/better/index.html
+++ b/views/better/index.html
@@ -41,13 +41,13 @@
                 <span>我的介绍</span>
             </div>
             <div class="wda-tree-cell">
-                <span>我的介绍</span>
+                <span>我的作品</span>
             </div>
             <div class="wda-tree-cell">
-                <span>我的介绍</span>
+                <span>我的足迹</span>
             </div>
             <div class="wda-tree-cell">
-                <span>我的介绍</span>
+                <span>友情链接</span>
             </div>
         </div>
     </div>
