--- a/views/better/index.html
+++ b/views/better/index.html
@@ -32,27 +32,27 @@
     <div class="wda-header-cell wda-pull-right">首页</div>
 </div>
 <div class="wda-content">
-    <div class="banner wda-prop-20" style="display: inline-block;">
+    <div class="wda-mark wda-prop-20" style="display: inline-block;">
         <div class="wda-prop-100">
             <div class="wda-prop-50" style="border-right: 2px solid #C0C0C0;height: 120px"></div>
         </div>
         <div class="wda-tree wda-prop-100">
-            <div class="wda-tree-cell">
+            <div class="wda-tree-cell wda-font-white">
                 <span>我的介绍</span>
             </div>
-            <div class="wda-tree-cell">
+            <div class="wda-tree-cell wda-font-white">
                 <span>我的作品</span>
             </div>
-            <div class="wda-tree-cell">
+            <div class="wda-tree-cell wda-font-white">
                 <span>我的足迹</span>
             </div>
-            <div class="wda-tree-cell">
+            <div class="wda-tree-cell wda-font-white">
                 <span>友情链接</span>
             </div>
         </div>
     </div>
-    <div>
-
+    <div style="height: 1500px;width: 100%">
+        <img src="../../images/login/timg.jpg" width="100%" height="100%">
     </div>
 </div>
 <script type="text/javascript" src="../../js/jquery/jquery-2.2.0.min.js"></script>
