--- a/css/wda.css
+++ b/css/wda.css
@@ -1,7 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-}
+html,
+body { height: 100%; padding: 0; margin: 0; }
 
 .wda-header {
     position: fixed;
@@ -17,6 +15,7 @@
 
 .wda-mark {
     position: fixed;
+    margin-left: 10px;
 }
 
 .wda-header ~ .wda-content {
@@ -33,6 +32,7 @@
 
 .wda-content {
     width: 100%;
+    height: 100%;
 }
 
 .wda-prop-100 {
@@ -70,8 +70,7 @@
 .wda-tree {
     display: inline-block;
     text-align: center;
-    border: 2px dotted #C0C0C0;
-    margin-left: 10px;
+    border: 2px dotted #C0C0C0
 }
 
 .wda-tree-cell {
