--- a/views/better/index.html
+++ b/views/better/index.html
@@ -23,6 +23,10 @@
                 transform: rotate(60deg);
             }
         }
+
+        .wda-content {
+            background: linear-gradient(120deg, red, blue);
+        }
     </style>
 </head>
 <body>
@@ -51,9 +55,9 @@
             </div>
         </div>
     </div>
-    <div style="height: 1500px;width: 100%">
-        <img src="../../images/login/timg.jpg" width="100%" height="100%">
-    </div>
+    <!--<div style="height: 1500px;width: 100%">-->
+    <!--<img src="../../images/login/timg.jpg" width="100%" height="100%">-->
+    <!--</div>-->
 </div>
 <script type="text/javascript" src="../../js/jquery/jquery-2.2.0.min.js"></script>
 </body>
