--- a/views/better/index.html
+++ b/views/better/index.html
@@ -36,7 +36,7 @@
     <div class="wda-header-cell wda-pull-right">首页</div>
 </div>
 <div class="wda-content">
-    <div class="wda-mark wda-prop-20" style="display: inline-block;">
+    <div class="wda-mark wda-prop-20">
         <div class="wda-prop-100">
             <div class="wda-prop-50" style="border-right: 2px solid #C0C0C0;height: 120px"></div>
         </div>
