--- a/css/wda.css
+++ b/css/wda.css
@@ -1,5 +1,11 @@
 html,
-body { height: 100%; padding: 0; margin: 0; }
+body {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
 
 .wda-header {
     position: fixed;
