--- a/views/nest/index.html
+++ b/views/nest/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <script type="text/javascript" src="../../js/jquery/jquery-2.2.0.min.js"></script>
     <title>第一章 期许</title>
     <style>
