--- a/views/better/index.html
+++ b/views/better/index.html
@@ -25,7 +25,7 @@
         }
 
         .wda-content {
-            background: linear-gradient(120deg, red, blue);
+            background: linear-gradient(145deg, #808080, #DADADA);
         }
     </style>
 </head>
@@ -38,7 +38,7 @@
 <div class="wda-content">
     <div class="wda-mark wda-prop-20">
         <div class="wda-prop-100">
-            <div class="wda-prop-50" style="border-right: 2px solid #C0C0C0;height: 120px"></div>
+            <div class="wda-prop-50" style="border-right: 2px solid #C0C0C0;height: 80px"></div>
         </div>
         <div class="wda-tree wda-prop-100">
             <div class="wda-tree-cell wda-font-white">
