--- a/views/nest/index.html
+++ b/views/nest/index.html
@@ -129,7 +129,7 @@
             bodyCxt.clearRect(0, 0, w, time * (txtHeight + 10));
             bodyCxt.fillStyle = "#000";
             bodyCxt.fillRect(0, 0, w, time * (txtHeight + 10));
-            window.location.href = "myLove.html";
+//            window.location.href = "myLove.html";
         } else {
             if (time * txtHeight <= ( h / 2 - w / 4)) {
                 breakWidth = time * 10;
