--- a/views/js/index.html
+++ b/views/js/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>JavaScript模块</title>
 </head>
+<style>
+    a {
+        text-decoration:none;
+    }
+</style>
 <body>
 <a href="Math.html">1、Math对象方法</a>
 <hr>
