--- a/css/wda.css
+++ b/css/wda.css
@@ -1,11 +1,13 @@
-html,
 body {
     height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    /*overflow: auto;*/
+    top: 44px;
 }
+
+
 
 .wda-header {
     position: fixed;
@@ -38,7 +40,7 @@ body {
 
 .wda-content {
     width: 100%;
-    height: 100%;
+    height: inherit;
 }
 
 .wda-prop-100 {
