--- a/views/animation/egg.html
+++ b/views/animation/egg.html
@@ -57,7 +57,7 @@
             display: block;
             height: 50px;
             width: 50px;
-            background: url("../../images/login/logo.jpg") no-repeat;
+            background: url("../../images/login/logo2.jpg") no-repeat;
             background-size: 100% auto;
         }
         .egg > span:after{
