--- a/views/canvas/index.html
+++ b/views/canvas/index.html
@@ -44,9 +44,9 @@
     mainCxt.fillText("姓名：武晓泉", 0, 10);
     mainCxt.fillText("性别：男", 0, 30);
     mainCxt.fillText("职业：程序员", 0, 50);
-    mainCxt.fillText("收入：一般", 0, 70);
-    mainCxt.fillText("当前状态：无车、无房、低存款", 0, 90);
-    mainCxt.fillText("家庭条件：贫困", 0, 110);
+    mainCxt.fillText("收入：一般(刚工作不到2年,工资较低,税前6000)", 0, 70);
+    mainCxt.fillText("当前状态：无房、无车、个人存款若干", 0, 90);
+    mainCxt.fillText("家庭条件：一般(较复杂,有兴趣的可以聊聊)", 0, 110);
     mainCxt.fillText("期待另一半：160以上、人品第一位、孝敬父母、顾家、其他不看重。", 0, 130);
 
     //获取屏幕高度和宽度
